# Toto-Finetuning-and-Benchmarking

./: .gitignore  pyproject.toml
configs/: boom_compare.yaml  synthetic_compare.yaml  synthetic_seasonal_naive.yaml
scripts/: compare.py  visualize_boom.py  visualize_synthetic.py
src/ttbench/: __init__.py
src/ttbench/data/: __init__.py  boom.py  synthetic.py  windows.py
src/ttbench/eval/: __init__.py  runner.py
src/ttbench/metrics/: __init__.py  forecasting.py
src/ttbench/models/: __init__.py  base.py  baselines.py  toto_model.py
tests/: test_metrics.py  test_regression.py
